[package]
name = "async-priority-lock"
version = "1.0.0"
edition = "2024"
license = "MIT"
keywords = ["async", "mutex", "lock", "futures"]
description = "A priority-based async lock.  Optionally no-std."
repository = "https://github.com/wbourne0/async-priority-lock-rs"
readme = "README.md"
categories = ["asynchronous", "no-std"]

[package.metadata.docs.rs]
all-features = true

[features]
default = ["const-default", "mutex", "semaphore", "std", "arena-queue"]
evict = []
std = ["alloc"]
alloc = []
spin = ["dep:spin"]
serde = ["dep:serde"]
const-default = ["dep:const-default"]
mutex = []
semaphore = []
semaphore-total = []
box-queue = ["alloc"]
arena-queue = ["alloc"]

[profile.test]
opt-level = 3

[dependencies]
const-default = { version = "1.0.0", optional = true }
serde = { version = "1.0.228", default-features = false, optional = true, features = ["derive"] }
spin = { version = "0.10.0", optional = true,  default-features = false, features = [ "rwlock"] }

[dev-dependencies]
anyhow = "1.0.101"
futures = "0.3.32"
rand = { version = "0.10.0", features = ["sys_rng"] }
tokio = { version = "1.49.0", features = ["full"] }

